--- a/package.json
+++ b/package.json
@@ -86,7 +86,9 @@
         "ts-jest": "^24.1.0",
         "tslib": "^1.10.0",
         "typescript": "^3.6.4",
-        "webpack": "^4.41.5"
+        "webpack": "^4.41.5",
+        "jsdom": "^15.2.0",
+        "ssh2": "^0.8.6"
     },
     "jest": {
         "setupFiles": [
@@ -118,10 +120,5 @@
             }
         },
         "collectCoverage": true
-    },
-    "dependencies": {
-        "jsdom": "^15.2.0",
-        "ssh2": "^0.8.6",
-        "striptags": "^3.1.1"
     }
 }
